SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/Win_Plan__c.object-meta.xml
<CustomObject>
    <description>This plan helps us identify where our gaps are, what are risks are, and what we need to be focused on next. This will align with existing opportunities.</description>
    <label>Win Plan</label>
    <nameField>
        <label>Win Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Win Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>