SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Agreement_Signer__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who Signs The Agreement?</description>
    <inlineHelpText>Who Signs The Agreement?</inlineHelpText>
    <label>Agreement Signer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Win Plans (Agreement Signer)</relationshipLabel>
    <relationshipName>Win_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>