SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Android_Total_Downloads__c.field-meta.xml
<CustomField>
    <fullName>Android_Total_Downloads__c</fullName>
    <inlineHelpText>Google Play Store</inlineHelpText>
    <label>Android Total Downloads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>