SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Are_we_aligned_on_value__c.field-meta.xml
<CustomField>
    <fullName>Are_we_aligned_on_value__c</fullName>
    <label>Are we aligned on value?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>