SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Budget_Owner__c.field-meta.xml
<CustomField>
    <fullName>Budget_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who owns the budget?</description>
    <inlineHelpText>Who owns the budget?</inlineHelpText>
    <label>Budget Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Win Plans (Budget Owner)</relationshipLabel>
    <relationshipName>Win_Plans3</relationshipName>
    <type>Lookup</type>
</CustomField>