SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Compelling_event__c.field-meta.xml
<CustomField>
    <fullName>Compelling_event__c</fullName>
    <description>What is the compelling event?</description>
    <inlineHelpText>What is the compelling event?</inlineHelpText>
    <label>Compelling event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>