SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Competition_Strength__c.field-meta.xml
<CustomField>
    <fullName>Competition_Strength__c</fullName>
    <label>Competition Strengths</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>