SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Competition_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Competition_Weaknesses__c</fullName>
    <label>Competition Weaknesses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>