SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Win Plans (Contact)</relationshipLabel>
    <relationshipName>Win_Plans4</relationshipName>
    <type>Lookup</type>
</CustomField>