SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Deal_blockers__c.field-meta.xml
<CustomField>
    <fullName>Deal_blockers__c</fullName>
    <description>What could prevent this deal from moving forward?</description>
    <inlineHelpText>What could prevent this deal from moving forward?</inlineHelpText>
    <label>Deal blockers</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>