SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Deal_Desk_Link__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Link__c</fullName>
    <label>Deal Desk Link</label>
    <type>Url</type>
</CustomField>