SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Do_they_understand_our_legal_nonstarters__c.field-meta.xml
<CustomField>
    <fullName>Do_they_understand_our_legal_nonstarters__c</fullName>
    <label>Do they understand our legal nonstarters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>