SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Duration_of_redlining__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_redlining__c</fullName>
    <description>How long does redlining typically take them?</description>
    <inlineHelpText>How long does redlining typically take them?</inlineHelpText>
    <label>Duration of redlining</label>
    <length>255</length>
    <type>Text</type>
</CustomField>