SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Executive_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Executive_Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the Executive Buyer?</description>
    <inlineHelpText>Who is the Executive Buyer?</inlineHelpText>
    <label>Executive Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Win Plans (Executive Buyer)</relationshipLabel>
    <relationshipName>Win_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>