SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Has_Security_been_completed_and_signed__c.field-meta.xml
<CustomField>
    <fullName>Has_Security_been_completed_and_signed__c</fullName>
    <description>Has Security been completed and signed off on?</description>
    <inlineHelpText>Has Security been completed and signed off on?</inlineHelpText>
    <label>Has Security been completed and signed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>