SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Have_they_bought_software_before__c.field-meta.xml
<CustomField>
    <fullName>Have_they_bought_software_before__c</fullName>
    <label>Have they bought software before?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>