SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/iOS_Downloads__c.field-meta.xml
<CustomField>
    <fullName>iOS_Downloads__c</fullName>
    <label>iOS Downloads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>