SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Is_CS_up_to_speed_on_their_needs__c.field-meta.xml
<CustomField>
    <fullName>Is_CS_up_to_speed_on_their_needs__c</fullName>
    <label>Is CS up to speed on their needs?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>