SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/IT_Spend__c.field-meta.xml
<CustomField>
    <fullName>IT_Spend__c</fullName>
    <label>IT Spend</label>
    <length>225</length>
    <type>Text</type>
</CustomField>