SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Launchdarkly_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Launchdarkly_Strengths__c</fullName>
    <label>Launchdarkly Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>