SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Launchdarkly_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Launchdarkly_Weaknesses__c</fullName>
    <label>Launchdarkly Weaknesses</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>