SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Legal_Nonstarters__c.field-meta.xml
<CustomField>
    <fullName>Legal_Nonstarters__c</fullName>
    <formula>HYPERLINK(&quot;https://launchdarkly.atlassian.net/wiki/spaces/REV/pages/121045003/Working+with+Legal&quot;, &quot;Legal Nonstarters Confluence Page&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Nonstarters</label>
    <type>Text</type>
</CustomField>