SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Metric_tied_to_initiative__c.field-meta.xml
<CustomField>
    <fullName>Metric_tied_to_initiative__c</fullName>
    <description>What is the metric tied to this initiative?</description>
    <inlineHelpText>What is the metric tied to this initiative?</inlineHelpText>
    <label>Metric tied to initiative</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>