SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Monthly_Organic_Visitors__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Organic_Visitors__c</fullName>
    <inlineHelpText>Can be found on RankRangers</inlineHelpText>
    <label>Monthly Organic Visitors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>