SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Monthly_Website_Visitors__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Website_Visitors__c</fullName>
    <label>Monthly Website Visitors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>