SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Onboarding_and_Services__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_and_Services__c</fullName>
    <label>Do they require onboarding and services?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>