SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Opp_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opp_Amount__c</fullName>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>