SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opp related to win plan</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Win Plans</relationshipLabel>
    <relationshipName>Win_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>