SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Procurement_process__c.field-meta.xml
<CustomField>
    <fullName>Procurement_process__c</fullName>
    <description>What is their procurement process?</description>
    <inlineHelpText>What is their procurement process?</inlineHelpText>
    <label>Procurement process</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>