SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tech Evaluation</fullName>
                <default>true</default>
                <label>Tech Evaluation</label>
            </value>
            <value>
                <fullName>Value Alignment</fullName>
            </value>
            <value>
                <fullName>Executive Alignment</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>