SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Team_blocked_in_the_decision__c.field-meta.xml
<CustomField>
    <fullName>Team_blocked_in_the_decision__c</fullName>
    <description>What teams could block the deal?</description>
    <inlineHelpText>What teams could block the deal?</inlineHelpText>
    <label>Team that could block the deal?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>