SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Teams_Involved_in_Decision__c.field-meta.xml
<CustomField>
    <fullName>Teams_Involved_in_Decision__c</fullName>
    <description>What teams are involved in the decision?</description>
    <inlineHelpText>What teams are involved in the decision?</inlineHelpText>
    <label>Teams Involved in Decision</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>