SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stack__c</fullName>
    <inlineHelpText>Pulled from clearbit</inlineHelpText>
    <label>Tech Stack</label>
    <type>TextArea</type>
</CustomField>