SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Type_of_influence_does_our_champion_have__c.field-meta.xml
<CustomField>
    <fullName>Type_of_influence_does_our_champion_have__c</fullName>
    <description>What type of influence does our champion have?</description>
    <inlineHelpText>What type of influence does our champion have?</inlineHelpText>
    <label>Type of influence does our champion have</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>