SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/What_is_the_company_initiative__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_company_initiative__c</fullName>
    <label>What is the company initiative?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>