SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Who_initiated_project__c.field-meta.xml
<CustomField>
    <fullName>Who_initiated_project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who initiated the project?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Win Plans</relationshipLabel>
    <relationshipName>Win_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>