SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Why_change_to_a_FF__c.field-meta.xml
<CustomField>
    <fullName>Why_change_to_a_FF__c</fullName>
    <inlineHelpText>Why the change to a feature management platform?</inlineHelpText>
    <label>Why change to a FF platform?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>