SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Why_is_this_a_Risk__c.field-meta.xml
<CustomField>
    <fullName>Why_is_this_a_Risk__c</fullName>
    <label>Why is this a Risk?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>