SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/fields/Why_now__c.field-meta.xml
<CustomField>
    <fullName>Why_now__c</fullName>
    <label>Why now?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>