SFDC_LD_Packages/objects-layouts/main/default/objects/Win_Plan__c/recordTypes/Win_Plan.recordType-meta.xml
<RecordType>
    <fullName>Win_Plan</fullName>
    <active>true</active>
    <label>Win Plan</label>
</RecordType>